code refactoring; separated util class; used spring runner